<resources>
    <string name="app_name">Cryptocurrencies Bitso Wizeline Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maximum_price">MÁXIMO EN PEDIDOS</string>
    <string name="minimum_price">MÍNIMO EN PEDIDOS</string>
    <string name="maximum_price_detail">PRECIO MÁXIMO</string>
    <string name="minimum_price_detail">PRECIO MÍNIMO</string>
    <string name="last_price_detail">ÚLTIMO PRECIO</string>

    <string name="amount">Importe</string>

    <string name="price">Precio</string>
    <string name="asks">ASKS</string>
    <string name="bids">BIDS</string>
</resources>